# embd-gpio

./: .clang-format  .clang-tidy  CMakeLists.txt
Inc/: embd_gpio.h
